--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.9.1",
     "joi-oid": "^1.1.2",
     "jsonwebtoken": "^9.0.0",
+    "mercadopago": "^1.5.15",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
