--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mercadopago": "^1.5.15",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   },
